--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-node-resolve": "^6.1.0",
     "autoprefixer": "^9.7.3",
     "rollup": "^1.28.0",
     "rollup-plugin-babel": "^4.3.3",
