--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "dist/js/tobii.js",
   "style": "dist/css/tobii.css",
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "autoprefixer": "^9.7.4",
-    "rollup": "^2.0.6",
+    "@babel/core": "^7.10.1",
+    "@babel/preset-env": "^7.10.1",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "autoprefixer": "^9.8.0",
+    "core-js": "^3.6.5",
+    "rollup": "^2.11.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-babel-minify": "^10.0.0",
-    "standard": "^14.3.3"
+    "standard": "^14.3.4"
   },
   "browserslist": [
     "last 2 versions",
