--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
+    "@rollup/plugin-babel": "^5.0.2",
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "autoprefixer": "^9.8.0",
     "core-js": "^3.6.5",
-    "rollup": "^2.12.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-babel-minify": "^10.0.0",
-    "standard": "^14.3.4"
+    "cssnano": "^4.1.10",
+    "node-sass": "^4.14.1",
+    "rollup": "^2.12.1",
+    "rollup-plugin-css-only": "^2.1.0",
+    "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-filesize": "^9.0.0",
+    "rollup-plugin-license": "^2.1.0",
+    "rollup-plugin-postcss": "^3.1.1",
+    "rollup-plugin-stylelint": "^1.0.0",
+    "rollup-plugin-terser": "^5.1.2",
+    "standard": "^14.3.4",
+    "stylelint": "^13.5.0"
   },
   "browserslist": [
     "last 2 versions",
@@ -23,7 +32,7 @@
   ],
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "dev": "rollup -c -w --environment DEVELOPMENT",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
