--- a/package.json
+++ b/package.json
@@ -5,25 +5,24 @@
   "main": "dist/js/tobii.js",
   "style": "dist/css/tobii.css",
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "@rollup/plugin-babel": "^5.0.2",
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@rollup/plugin-babel": "^5.0.4",
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
-    "autoprefixer": "^9.8.0",
     "core-js": "^3.6.5",
     "cssnano": "^4.1.10",
     "node-sass": "^4.14.1",
-    "rollup": "^2.12.1",
+    "postcss-preset-env": "^6.7.0",
+    "rollup": "^2.21.0",
     "rollup-plugin-css-only": "^2.1.0",
     "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-filesize": "^9.0.0",
+    "rollup-plugin-filesize": "^9.0.2",
     "rollup-plugin-license": "^2.1.0",
     "rollup-plugin-postcss": "^3.1.1",
-    "rollup-plugin-stylelint": "^1.0.0",
     "rollup-plugin-terser": "^5.1.2",
     "standard": "^14.3.4",
-    "stylelint": "^13.5.0"
+    "stylelint": "^13.6.1"
   },
   "browserslist": [
     "last 2 versions",
