--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
   "rules": {
     "accessor-pairs": "error",
     "array-bracket-spacing": ["error", "never"],
+    "arrow-parens": ["error", "always"],
     "arrow-spacing": ["error", { "before": true, "after": true }],
     "block-spacing": ["error", "always"],
     "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
