--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "eslint": "^7.20.0",
-    "microbundle": "^0.13.0",
-    "node-sass": "^5.0.0",
+    "eslint": "^7.29.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "microbundle": "^0.13.3",
+    "node-sass": "^6.0.1",
     "rimraf": "^3.0.2",
-    "standard": "^14.3.4",
-    "stylelint": "^13.6.1"
+    "standard": "^16.0.3",
+    "stylelint": "^13.13.1"
   },
   "browserslist": {
     "browser": [
